--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,12 @@
 </head>
 <body>
 <header>
-
-
+<section>
+    <img src="/img/Logo_WCAG_WEBSITE.png" alt="A cat logo with a white circle around it">
+</section>
+<h1><%= title %></h1>
+<nav>
+    <a href="/home">Homepage</a>
+    <a href="/randomCat">Random Cat</a>
+</nav>
 </header>
