--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,7 @@ header nav a{
     font-family: var(--primaryFont);
     font-weight: 400;
     font-size: 2vw;
+    color: var(--primaryColor);
     padding: 0.6vw;
 }
 :root {
