--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,8 @@
 <%- include("./partials/head.ejs") %>
-
+<script src="scripts/index.js"></script>
 <%- include("./partials/header.ejs") %>
+<main>
 
+</main>
 
-
-
-
-
-
-<%- include("./partials/footer.ejs") %>
+<%- include("./partials/footer.ejs") %> 
