--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include("./partials/head.ejs") %>
+<link rel="stylesheet" href="css/home.css">
 <script src="scripts/index.js"></script>
 <%- include("./partials/header.ejs") %>
 <main>
